2007-01-25  Gert Driesen  <drieseng@users.sourceforge.net>

	* StreamReaderTest.cs: Added test for bug #75526.

2007-01-11  Gert Driesen  <drieseng@users.sourceforge.net>

	* DirectoryTest.cs: Fixed compiler warning by improving test.

2006-01-25	Bors Kirzner <borisk@mainsoft.com>

	* DirectoryInfoTest.cs, DirectoryTest.cs, FileInfoTest.cs, FileSystemInfoTest.cs
	FileTest.cs: add ifdefs for TARGET_JVM.
	
2006-12-21  Gert Driesen  <drieseng@users.sourceforge.net>

	* MemoryStreamTest.cs: Added (de)serialization tests for bug #80205.

2006-11-28  Gert Driesen  <drieseng@users.sourceforge.net>

	* DirectoryTest.cs: Use Assert.Ignore instead of silently ignoring
	test.

2006-11-07  Gert Driesen  <drieseng@users.sourceforge.net>

	* DirectoryTest.cs: Use Assert class intead of deriving from 
	deprecated Assertion class. Only ignore CreationTime test on unix.
	Removed extra tabs.

2006-11-07  Dick Porter  <dick@ximian.com>

	* DirectoryTest.cs: CreateDirectoryAlreadyExistsAsFile() should
	expect an IOException in the 2.0 profile

2006-10-30 Joel Reed  <joel.reed@ddiworld.com>

	* DirectoryInfoTest.cs: Updated tests to support the DirectoryInfo
	SearchOption.AllDirectories

2006-09-24  Raja R Harinath  <harinath@gmail.com>

	* FileInfoTest.cs (IsReadOnly): Fix compilation.  Mark as NotWorking.

2006-09-24 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* FileInfoTest.cs: improved IsReadOnly test case. Patch by Joel Reed.

2006-09-21  Gert Driesen  <drieseng@users.sourceforge.net>

	* FileNotFoundExceptionTest.cs: Added ctor tests.

2006-07-06  Dick Porter  <dick@ximian.com>

	* DirectoryTest.cs: Test creating a directory when a file or
	directory already exists with the requested name.

2006-05-14  Zoltan Varga  <vargaz@gmail.com>

	* DirectoryTest.cs: Ignore one of the tests which causes nunit to abort on
	IA64 due to an exception handling bug.

2006-05-08  Atsushi Enomoto <atsushi@ximian.com>

	* DirectoryTest.cs : don't expect "chmod" on Windows.
