@@ -411,6 +411,9 @@ public class BinaryWriterTest : Assertion {
 	}
 	
 	[Test]
+#if TARGET_JVM
+    [Category("NotWorking")]
+#endif
 	public void WriteFloat ()
 	{
 		MemoryStream stream = new MemoryStream ();
