@@ -1,3 +1,7 @@
+2007-01-29	Boris Kirzner <borisk@mainsoft.com>
+	* BinaryReaderTest.cs, BinaryWriterTest.cs, PathTest.cs: test fixes
+	for TARGET_JVM.
+
 2007-01-25  Gert Driesen  <drieseng@users.sourceforge.net>
 
 	* StreamReaderTest.cs: Added test for bug #75526.
